# Alchemy

./: .gitignore  README.md  pyproject.toml
ai_scientist/: __init__.py  config.yaml  main.py
ai_scientist/agent/: __init__.py  agent.py  context.py  evaluator.py  prompt.py  response_parser.py
ai_scientist/agent/memory/: __init__.py
ai_scientist/agent/memory/domain_knowledge/: __init__.py  collector.py  learner.py  path_resolver.py  writer.py
ai_scientist/agent/prompts/: code_implementation.jinja  hyperparameter.jinja  hypothesis.jinja  knowledge_learning.jinja
ai_scientist/domain_knowledge/recsys/multimodal_rec/: knowledge.md
ai_scientist/domain_knowledge/timeseries/anomaly_detection/: knowledge.md
ai_scientist/domain_knowledge/timeseries/classification/: knowledge.md
ai_scientist/domain_knowledge/timeseries/imputation/: knowledge.md
ai_scientist/domain_knowledge/timeseries/long_term_forecast/: knowledge.md
ai_scientist/domain_knowledge/timeseries/short_term_forecast/: knowledge.md
ai_scientist/tools/: __init__.py  knowledge_learner.py
ai_scientist/utils/: __init__.py  config.py  llm_client.py  save.py  seed_loader.py
research_environment/: __init__.py  config.yaml  mount.py  orchestrator.py  plugin.py
research_environment/collector/: __init__.py  result_table.py
research_environment/executor/: __init__.py  base.py  docker.py  singularity.py
research_environment/scheduler/: __init__.py  gpu_scheduler.py
research_environment/tasks/Recsys/MMRec/: config.yaml  plugin.py
research_environment/tasks/TimeSeries/anomaly_detection/: config.yaml  (+1 more)
(+437 files in other folders)
